SpriteBox fixes: background colour now extends for larger images, no stretching images anymore
PNG now with antialiasing option

--- a/imports/ui/components/pix/picSpriteZoom.less
+++ b/imports/ui/components/pix/picSpriteZoom.less
@@ -1,3 +1,8 @@
+#picSpriteBox {
+  background-color: green;
+  flex-grow: 1;
+}
+
 figure {
   height: 100%;
   margin: 0;
@@ -21,4 +26,5 @@ figure {
   image-rendering: -webkit-optimize-contrast;
   -ms-interpolation-mode: nearest-neighbor;
   image-rendering: pixelated;
+  object-fit: cover; // prevents the image to compress if window is too small
 }
