--- a/imports/ui/pages/spriteBoxPage.less
+++ b/imports/ui/pages/spriteBoxPage.less
@@ -14,6 +14,8 @@
   font-size: @font-meta-size;
   cursor: pointer;
   user-select: none;
+  display: flex;
+  justify-content: flex-start;
 }
 
 .picMetaBox {
@@ -24,7 +26,6 @@
   position: fixed;
   z-index: 15;
   width: 100%;
-  // border-top: 1px solid #333326;
 }
 
 .copyright {
